# drain_lift

./: .gitignore
grating_coord_py/: package.xml  setup.cfg  setup.py
grating_coord_py/grating_coord_py/: coord_sender_py.py
grating_detector_py/: package.xml  setup.cfg  setup.py
grating_detector_py/grating_detector_py/: detector_node_rgb (copy).py  detector_node_rgb.py  test_image.py
grating_interfaces/: CMakeLists.txt  package.xml
grating_interfaces/msg/: GratingHoles.msg
stm32_motor_control/: package.xml  setup.cfg  setup.py
stm32_motor_controller/: package.xml  setup.cfg  setup.py
stm32_motor_controller/stm32_motor_controller/: motor_controller_node.py
