<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grating_detector_py</name>
  <version>0.0.1</version>
  <description>YOLO-based grating detector node (Python)</description>

  <!-- 너 이름/메일로 바꿔 -->
  <maintainer email="sj-desktop@todo.todom">hyunwoo</maintainer>
  <license>Apache-2.0</license>

  <!-- 파이썬 패키지 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 파이썬 노드 -->
  <exec_depend>rclpy</exec_depend>

  <!-- 카메라 이미지 받을 수도 있으니까 -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- 우리가 아까 만든 msg 패키지 -->
  <exec_depend>grating_interfaces</exec_depend>

  <!-- 테스트는 원래 있던 거 유지 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
